// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateViewConfigJs can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ARRAY_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const ArrayPropsNativeComponentViewConfig = {
  uiViewClassName: 'ArrayPropsNativeComponent',

  validAttributes: {
    names: true,
    disableds: true,
    progress: true,
    radii: true,
    colors: { process: require('processColorArray') },
    srcs: true,
    points: true,
  },
};

registerGeneratedViewConfig('ArrayPropsNativeComponent', ArrayPropsNativeComponentViewConfig);

module.exports = 'ArrayPropsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "BOOLEAN_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const BooleanPropNativeComponentViewConfig = {
  uiViewClassName: 'BooleanPropNativeComponent',

  validAttributes: {
    disabled: true,
  },
};

registerGeneratedViewConfig('BooleanPropNativeComponent', BooleanPropNativeComponentViewConfig);

module.exports = 'BooleanPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COLOR_PROP 1`] = `
Map {
  "COLOR_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const ColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ColorPropNativeComponent',

  validAttributes: {
    tintColor: { process: require('processColor') },
  },
};

registerGeneratedViewConfig('ColorPropNativeComponent', ColorPropNativeComponentViewConfig);

module.exports = 'ColorPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture ENUM_PROP 1`] = `
Map {
  "ENUM_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const EnumPropsNativeComponentViewConfig = {
  uiViewClassName: 'EnumPropsNativeComponent',

  validAttributes: {
    alignment: true,
  },
};

registerGeneratedViewConfig('EnumPropsNativeComponent', EnumPropsNativeComponentViewConfig);

module.exports = 'EnumPropsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EVENT_NESTED_OBJECT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const EventsNestedObjectNativeComponentViewConfig = {
  uiViewClassName: 'EventsNestedObjectNativeComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    disabled: true,
    onChange: true,
  },
};

registerGeneratedViewConfig('EventsNestedObjectNativeComponent', EventsNestedObjectNativeComponentViewConfig);

module.exports = 'EventsNestedObjectNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_PROPS 1`] = `
Map {
  "EVENT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const EventsNativeComponentViewConfig = {
  uiViewClassName: 'EventsNativeComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },

    topEnd: {
      phasedRegistrationNames: {
        captured: 'onEndCapture',
        bubbled: 'onEnd',
      },
    },
  },

  directEventTypes: {
    topEventDirect: {
      registrationName: 'onEventDirect',
    },
  },

  validAttributes: {
    disabled: true,
    onChange: true,
    onEventDirect: true,
    onEnd: true,
  },
};

registerGeneratedViewConfig('EventsNativeComponent', EventsNativeComponentViewConfig);

module.exports = 'EventsNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture FLOAT_PROPS 1`] = `
Map {
  "FLOAT_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const FloatPropNativeComponentViewConfig = {
  uiViewClassName: 'FloatPropNativeComponent',

  validAttributes: {
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true,
  },
};

registerGeneratedViewConfig('FloatPropNativeComponent', FloatPropNativeComponentViewConfig);

module.exports = 'FloatPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture IMAGE_PROP 1`] = `
Map {
  "IMAGE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const ImagePropNativeComponentViewConfig = {
  uiViewClassName: 'ImagePropNativeComponent',

  validAttributes: {
    thumbImage: { process: require('resolveAssetSource') },
  },
};

registerGeneratedViewConfig('ImagePropNativeComponent', ImagePropNativeComponentViewConfig);

module.exports = 'ImagePropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTEGER_PROPS 1`] = `
Map {
  "INTEGER_PROPSNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const IntegerPropNativeComponentViewConfig = {
  uiViewClassName: 'IntegerPropNativeComponent',

  validAttributes: {
    progress1: true,
    progress2: true,
    progress3: true,
  },
};

registerGeneratedViewConfig('IntegerPropNativeComponent', IntegerPropNativeComponentViewConfig);

module.exports = 'IntegerPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "INTERFACE_ONLYNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const InterfaceOnlyComponentViewConfig = {
  uiViewClassName: 'RCTInterfaceOnlyComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    accessibilityHint: true,
    onChange: true,
  },
};

registerGeneratedViewConfig('RCTInterfaceOnlyComponent', InterfaceOnlyComponentViewConfig);

module.exports = 'RCTInterfaceOnlyComponent'; // RCT prefix present for paper support
",
}
`;

exports[`GenerateViewConfigJs can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "MULTI_NATIVE_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const ImageColorPropNativeComponentViewConfig = {
  uiViewClassName: 'ImageColorPropNativeComponent',

  validAttributes: {
    thumbImage: { process: require('resolveAssetSource') },
    color: { process: require('processColor') },
    thumbTintColor: { process: require('processColor') },
    point: { diff: require('pointsDiffer') },
  },
};

registerGeneratedViewConfig('ImageColorPropNativeComponent', ImageColorPropNativeComponentViewConfig);

module.exports = 'ImageColorPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture POINT_PROP 1`] = `
Map {
  "POINT_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const PointPropNativeComponentViewConfig = {
  uiViewClassName: 'PointPropNativeComponent',

  validAttributes: {
    startPoint: { diff: require('pointsDiffer') },
  },
};

registerGeneratedViewConfig('PointPropNativeComponent', PointPropNativeComponentViewConfig);

module.exports = 'PointPropNativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture STRING_PROP 1`] = `
Map {
  "STRING_PROPNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const StringPropComponentViewConfig = {
  uiViewClassName: 'StringPropComponent',

  validAttributes: {
    accessibilityHint: true,
  },
};

registerGeneratedViewConfig('StringPropComponent', StringPropComponentViewConfig);

module.exports = 'StringPropComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "TWO_COMPONENTS_DIFFERENT_FILESNativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const MultiFile1NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile1NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

registerGeneratedViewConfig('MultiFile1NativeComponent', MultiFile1NativeComponentViewConfig);

module.exports = 'MultiFile1NativeComponent';

const MultiFile2NativeComponentViewConfig = {
  uiViewClassName: 'MultiFile2NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

registerGeneratedViewConfig('MultiFile2NativeComponent', MultiFile2NativeComponentViewConfig);

module.exports = 'MultiFile2NativeComponent';
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "TWO_COMPONENTS_SAME_FILENativeViewConfig.js" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

'use strict';

const registerGeneratedViewConfig = require('registerGeneratedViewConfig');

const MultiComponent1NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent1NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

registerGeneratedViewConfig('MultiComponent1NativeComponent', MultiComponent1NativeComponentViewConfig);

module.exports = 'MultiComponent1NativeComponent';

const MultiComponent2NativeComponentViewConfig = {
  uiViewClassName: 'MultiComponent2NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

registerGeneratedViewConfig('MultiComponent2NativeComponent', MultiComponent2NativeComponentViewConfig);

module.exports = 'MultiComponent2NativeComponent';
",
}
`;
